--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Cake webpage</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
- <header>
-     <div>
-       <img>
-       <h1></h1>
+ <header class="header">
+     <div class="brand">
+       <img class="logo">
+       <h1>Logo Img</h1>
         <div>
           <span></span>
         </div>
